# fast_zero

./: .env.test  .gitignore  README.md  pyproject.toml
fast_zero/: app.py  dependencies.py  main.py  models.py  schemas.py  security.py  settings.py
fast_zero/app_v1/: routes.py
fast_zero/app_v2/: routes.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: 0bbde852f34d_recria_todos_com_campos_de_timestamp.py  2d96d9e3b128_create_users_table.py  33c92c97baaa_add_updated_at_field_in_users_table.py  7b3c387d3462_create_todos_table.py
tests/: conftest.py  test_app.py  test_app_v1.py  test_app_v2.py  test_db.py  test_root.py  test_security.py
tests/routers/: test_auth.py  test_todos.py  test_users.py
