[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Tiago Silva <tiago.toya@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = { extras = ["standard"], version = "^0.115.6" }
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.3"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
dev = "fastapi dev fast_zero/main.py"
lint = "ruff check . && ruff check . --diff"
format = "ruff check . --fix && ruff format ."
pre_test = "task lint"
post_test = "echo 'Executando post_test' && coverage html"
test = "pytest -s --cov=fast_zero -vv"

[tool.ruff]
line-length = 82
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
