[tool.poetry]
authors = ["Tiago Silva <tiago.toya@hotmail.com>"]
description = ""
name = "fast-zero"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
alembic = "^1.14.1"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pwdlib = {extras = ["argon2"], version = "^0.2.1"}
pydantic-settings = "^2.7.1"
pyjwt = "^2.10.1"
python = "3.12.*"
python-multipart = "^0.0.20"
sqlalchemy = "^2.0.38"
tzdata = "^2025.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.8.3"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
dev = "fastapi dev fast_zero/main.py"
format = "ruff check . --fix && ruff format ."
lint = "ruff check . && ruff check . --diff"
post_test = "echo 'Executando post_test' && coverage html"
pre_test = "task lint"
test = "pytest -s --cov=fast_zero -vv"

[tool.ruff]
extend-exclude = ['migrations']
line-length = 82

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
addopts = '-p no:warnings'
pythonpath = '.'

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
